# 457239709

./: CMakeLists.txt  README.md  appdata.xml  hello.cpp  org.synfig.SynfigStudio.appdata.xml.in  test.sh
po/: fr.po
